examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/cons_reconstruct.st
language core;

extend with #type-reconstruction, #lists;


fn main(n : Nat) -> Nat {
  return cons(0, []);
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
